--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
             'dagger'           : '2.27',
             'espresso_core'    : '3.0.2',
             'glide'            : '4.11.0',
-            'gradle'           : '3.6.2',
+            'gradle'           : '3.6.3',
             'gson'             : '2.8.5',
             'junit'            : '4.12',
             'kotlin'           : '1.3.31',
@@ -19,20 +19,21 @@ buildscript {
             'okhttp'           : '4.4.1',
             'retrofit'         : '2.8.1',
             'room'             : '2.2.5',
+            'recyclerview'     : '1.1.0',
             'runner'           : '1.0.2',
             'stetho'           : '1.5.1',
             'test_core'        : '1.1.1',
-            'test_espresso'     : '3.1.0',
-            'test_runner'       : '1.1.0'
+            'test_espresso'    : '3.1.0',
+            'test_runner'      : '1.1.0'
     ]
 
     ext.appInfo = [
-            'application_id'        : 'fr.sokdi.android_cleanarchitecture_mvvm',
-            'compile_sdk_version'   : 28,
-            'min_sdk_version'       : 21,
-            'target_sdk_version'    : 28,
-            'version_code'          : 1,
-            'version_name'          : '1.0'
+            'application_id'     : 'fr.sokdi.android_cleanarchitecture_mvvm',
+            'compile_sdk_version': 28,
+            'min_sdk_version'    : 21,
+            'target_sdk_version' : 28,
+            'version_code'       : 1,
+            'version_name'       : '1.0'
     ]
 
     repositories {
