--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
             'glide'            : '4.11.0',
             'gradle'           : '7.0.2',
             'gson'             : '2.8.5',
+            'hilt'             : '2.38.1',
             'junit'            : '4.12',
             'kotlin'           : '1.3.40',
             'legacy_support_v4': '1.0.0',
@@ -18,7 +19,7 @@ buildscript {
             'navigation'       : '2.3.5',
             'okhttp'           : '4.4.1',
             'retrofit'         : '2.8.1',
-            'room'             : '2.2.4',
+            'room'             : '2.2.3',
             'recyclerview'     : '1.1.0',
             'runner'           : '1.0.2',
             'stetho'           : '1.5.1',
@@ -38,21 +39,20 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
-
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:${versions.gradle}"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:${versions.navigation}"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:${versions.hilt}"
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
-
+        mavenCentral()
     }
 
 }
