--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kodizfun.countries">
+    package="kodizfun.countries" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -13,8 +13,10 @@
         android:launchMode="singleTop"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name="kodizfun.countries.layer_presentation.view.MainActivity">
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name=".layer_presentation.view.MainActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
